runtime/CommandLine/TraceExceptionsTest.java fails when exception is thrown in compiled code

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b105
    • Verified

      It works fine in the interpreter:

      Exception <a 'java/lang/ClassNotFoundException': NoClassFound> (0x000000009235a8f0)
       thrown in interpreter method <{method} {0x00007f2828a3dec0} 'findClass' '(Ljava/lang/String;)Ljava/lang/Class;' in 'java/net/URLClassLoader'>
       at bci 44 for thread 0x00007f283c011000

      but not in compiled code:

      Exception <a 'java/lang/ClassNotFoundException'> (0x00000000923a6420) thrown in compiled method <{method} {0x00007ff899815bb0} 'loadClass' '(Ljava/lang/String;Z)Ljava/lang/Class;' in 'java/lang/ClassLoader'> at PC 0x00007ff8c9d6717c for thread 0x00007ff8dc011000

      Running with -Xcomp shows this but passes because it's lucky that one frame is an interpreter frame.

            Assignee:
            Rachel Protacio (Inactive)
            Reporter:
            Christian Thalinger (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: