8144953: runtime/CommandLine/TraceExceptionsTest.java fails when exception is thrown in compiled code

Added long-form logging message to three places in code, allowing TraceExceptionsTest.java to pass with compiled code.

Reviewed-by: dholmes, coleenp, lfoltan